test/deca/syntax/invalid/ifthenelse_else_incomplet.deca
// Description:
//    test de programme incorrect syntaxiquement
//
// Resultats:
//    ligne 10 : Erreur (rien après le else)

{
    if (true) {
        
    } else
}